force-app/main/default/objects/Test_Result__c/fields/Last_Modified_Time__c.field-meta.xml
<CustomField>
    <fullName>Last_Modified_Time__c</fullName>
    <formula>LastModifiedDate</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Last Modified Time</label>
    <type>DateTime</type>
</CustomField>