force-app/main/default/objects/Test_Result__c/fields/MIBOS_Last_Modified_By__c.field-meta.xml
<CustomField>
    <fullName>MIBOS_Last_Modified_By__c</fullName>
    <label>MIBOS Last Modified By</label>
    <length>80</length>
    <type>Text</type>
</CustomField>