force-app/main/default/objects/Test_Result__c/fields/MIBOS_Migration_Name__c.field-meta.xml
<CustomField>
    <fullName>MIBOS_Migration_Name__c</fullName>
    <label>MIBOS Migration Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>