force-app/main/default/objects/Test_Result__c/fields/Owner_Business_Unit__c.field-meta.xml
<CustomField>
    <fullName>Owner_Business_Unit__c</fullName>
    <formula>TEXT( CreatedBy.Business_Unit__c )</formula>
    <label>Owner Business Unit</label>
    <type>Text</type>
</CustomField>