force-app/main/default/objects/Test_Result__c/fields/Test_Cycle__c.field-meta.xml
<CustomField>
    <fullName>Test_Cycle__c</fullName>
    <inlineHelpText>When did this test occur?</inlineHelpText>
    <label>Test Cycle</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Working Model</fullName>
            </value>
            <value>
                <fullName>Pre-Validation</fullName>
            </value>
            <value>
                <fullName>Validation</fullName>
            </value>
            <value>
                <fullName>Pre-UAT 1</fullName>
            </value>
            <value>
                <fullName>UAT 1</fullName>
            </value>
            <value>
                <fullName>Pre-UAT 2</fullName>
            </value>
            <value>
                <fullName>UAT 2</fullName>
            </value>
            <value>
                <fullName>UAT 2.5</fullName>
            </value>
            <value>
                <fullName>Pre-UAT 3</fullName>
            </value>
            <value>
                <fullName>UAT 3</fullName>
            </value>
            <value>
                <fullName>Pre-Go-Live</fullName>
            </value>
            <value>
                <fullName>Go-Live</fullName>
                <default>true</default>
                <label>Go-Live</label>
            </value>
            <value>
                <fullName>Post Go-Live</fullName>
            </value>
            <value>
                <fullName>UAT 4 (Contract Carve Out Only)</fullName>
            </value>
            <value>
                <fullName>XRS UAT 1</fullName>
            </value>
            <value>
                <fullName>XRS UAT 2</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>