force-app/main/default/objects/Test_Result__c/fields/Test_Record__c.field-meta.xml
<CustomField>
    <fullName>Test_Record__c</fullName>
    <inlineHelpText>Copy the URL of the Test Record here that resulted in the Failed or Passed with Exception</inlineHelpText>
    <label>Test Record</label>
    <type>Url</type>
</CustomField>