force-app/main/default/objects/Test_Result__c/fields/Test_Scenario__c.field-meta.xml
<CustomField>
    <fullName>Test_Scenario__c</fullName>
    <inlineHelpText>Which top level test scenario does this result apply to?</inlineHelpText>
    <label>Test Scenario</label>
    <referenceTo>Test_Scenario__c</referenceTo>
    <relationshipLabel>Test Results</relationshipLabel>
    <relationshipName>Test_Results</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>