force-app/main/default/objects/Test_Result__c/fields/Track_From_Scenario__c.field-meta.xml
<CustomField>
    <fullName>Track_From_Scenario__c</fullName>
    <formula>Test_Scenario__r.Track_From_Requirement__c</formula>
    <inlineHelpText>From the Test Scenario via the Requirement</inlineHelpText>
    <label>Track (From Scenario)</label>
    <type>Text</type>
</CustomField>