force-app/main/default/objects/Test_Result__c/listViews/All_Test_Results.listView-meta.xml
<ListView>
    <fullName>All_Test_Results</fullName>
    <columns>NAME</columns>
    <columns>Test_Scenario__c</columns>
    <columns>Steps_to_Reproduce__c</columns>
    <columns>UPDATEDBY_USER</columns>
    <columns>LAST_UPDATE</columns>
    <columns>Test_Status__c</columns>
    <columns>Track_From_Scenario__c</columns>
    <columns>MIBOS_Created_By__c</columns>
    <columns>MIBOS_Last_Modified_By__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Test Results</label>
    <language>en_US</language>
</ListView>