force-app/main/default/objects/Test_Result__c/listViews/Blocked_Test_Results.listView-meta.xml
<ListView>
    <fullName>Blocked_Test_Results</fullName>
    <columns>NAME</columns>
    <columns>Test_Cycle__c</columns>
    <columns>Test_Scenario__c</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>Steps_to_Reproduce__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>UPDATEDBY_USER</columns>
    <columns>LAST_UPDATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Test_Status__c</field>
        <operation>equals</operation>
        <value>Blocked</value>
    </filters>
    <label>Blocked Test Results</label>
    <language>en_US</language>
</ListView>