force-app/main/default/objects/Test_Result__c/listViews/Ready_to_Re_test_Test_Results_Sales.listView-meta.xml
<ListView>
    <fullName>Ready_to_Re_test_Test_Results_Sales</fullName>
    <columns>NAME</columns>
    <columns>Test_Cycle__c</columns>
    <columns>Test_Scenario__c</columns>
    <columns>Steps_to_Reproduce__c</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>UPDATEDBY_USER</columns>
    <columns>Track_From_Scenario__c</columns>
    <columns>Test_Record__c</columns>
    <columns>Test_Status__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Test_Status__c</field>
        <operation>equals</operation>
        <value>Re-Test</value>
    </filters>
    <filters>
        <field>Track_From_Scenario__c</field>
        <operation>contains</operation>
        <value>Sale</value>
    </filters>
    <label>Ready to Re-test: Test Results--Sales</label>
    <language>en_US</language>
</ListView>